[tool.poetry]
name = "lcovparser"
version = "0.0.1"
description = "A pure Python parser for LCOV info files"
license = "Apache v2"
authors = [
  "Chris Timperley <christimperley@googlemail.com>"
]
repository = "https://github.com/ChrisTimperley/lcovparser.py"
homepage = "https://github.com/ChrisTimperley/lcovparser.py"
keywords = ["LCOV", "coverage", "trace file", "parser"]

[tool.poetry.dependencies]
python = ">= 3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.11.1"
mypy = "^0.780"
pytest = "^6.1.1"
pytest-xdist = "^2.1.0"
ptpython = "^2.0.6"
tox = "^3.14.1"
coveralls = "^1.8.2"
bump2version = "^1.0.1"
