[tool.poetry]
name = "lcovparser"
version = "0.0.1"
description = "A pure Python parser for LCOV info files"
license = "Apache-2.0"
readme = "README.rst"
authors = [
  "Chris Timperley <christimperley@googlemail.com>"
]
repository = "https://github.com/ChrisTimperley/lcovparser.py"
homepage = "https://github.com/ChrisTimperley/lcovparser.py"
keywords = ["LCOV", "coverage", "trace file", "parser"]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">= 3.9"
sourcelocation = "^1.0.2"

[tool.poetry.dev-dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
tox = "*"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = false
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sourcelocation.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
